# aqmesh

./: .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AI-STATEMENT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  datapackage.yaml  prefect.yaml  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: actionlint.yml  ci.yml  link-check.yml  publish-to-pypi.yml  python-ci.yml  release-please-lock-sync.yml  release-please.yml  release-to-orda.yml  shellcheck.yml
deploy/: bootstrap.sh
deploy/systemd/: README.md  prefect-server.service  prefect-worker.service
docs/: README.md  architecture.md  deployment.md  pipeline.md  prefect-ui.md  publish.md  service-management.md  system-requirements.md  troubleshooting.md
docs/api-reference/: README.md  assets.md  authentication.md  device-management.md  diagnostics.md  readings.md
schemas/: raw_gas_reading.json
src/aqmesh_client/: __init__.py  models.py
src/aqmesh_pipeline/: __init__.py  __main__.py  cli.py  client.py  config.py  csvw.py  diagnostics.py  logging_setup.py  metadata.py  models.py  storage.py  transform.py  validate.py
src/aqmesh_pipeline/flows/: clean.py  ingest.py  metadata.py  pipeline.py  validate.py
src/aqmesh_pipeline/resources/: README.txt
src/aqmesh_pipeline/schemas/: raw_gas_reading.json  raw_particle_reading.json
tests/: conftest.py  test_cli.py  test_cli_info.py  test_client.py  test_client_cli.py  test_config.py  test_csvw.py  test_diagnostics.py  test_flows.py  test_logging_setup.py  test_metadata.py  test_models.py  test_repeat_last.py  test_schema.py  test_storage.py  test_transform.py  test_validate.py
