[project]
name = "aqmesh-pipeline"
version = "0.1.0"
description = "Data pipeline that downloads raw AQMesh air-quality data and cleans it for researchers."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Joe Heffer", email = "j.heffer@sheffield.ac.uk" }]
dependencies = [
    "prefect>=3.1",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pandas>=2.2",
]

[project.scripts]
aqmesh = "aqmesh_pipeline.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqmesh_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov --cov-report=term-missing"

[tool.coverage.run]
source = ["aqmesh_pipeline"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
