[project]
name = "aqmesh-pipeline"
version = "0.5.0"
description = "Data pipeline that downloads raw AQMesh air-quality data and cleans it for researchers."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Joe Heffer", email = "j.heffer@sheffield.ac.uk" }]
dependencies = [
    "aqmesh>=0.1.0",
    "prefect>=3.1",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pandas>=2.2",
    "ruamel-yaml>=0.18",
    "jsonschema>=4",
]

[project.scripts]
aqmesh = "aqmesh_pipeline.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.6",
    "pip-audit>=2.7",
    "bandit[toml]>=1.7",
]

[tool.uv.workspace]
members = ["packages/aqmesh-client"]

[tool.uv.sources]
aqmesh = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqmesh_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "packages/aqmesh-client/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov --cov-report=term-missing"

[tool.coverage.run]
source = ["aqmesh_pipeline", "aqmesh_client"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
